feat: add confirmation send plain text dialog in web frame

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,4 +53,8 @@
     <string name="decrypted" translatable="false">رمزگشایی شده</string>
     <string name="version" translatable="false">ورژن:</string>
     <string name="message_limit_text" translatable="false">حداکثر طول مجاز هر پیام ۶۰۰ کاراکتر است.</string>
+    <string name="send_plain_text_warning">
+    شما کلید رمزنگاری مخاطب موردنظر را در اختیار ندارید.
+    آیا مایل به ارسال پیام به‌صورت غیررمزنگاری‌شده هستید؟
+    </string>
 </resources>
